# Ingredient_Identifier

./: README.md  pyproject.toml
data/Food-Ingredient-Recognition-1/: README.dataset.txt  README.roboflow.txt
data/Food-Ingredient-Recognition-1/test/: _annotations.coco.json
data/Food-Ingredient-Recognition-1/valid/: _annotations.coco.json
models/: class_indices.json
scripts/: ToRuleThemAll.ipynb  db_building.ipynb  model_building.ipynb  recipe_search.py
